--- a/ss15/src/main/webapp/WEB-INF/views/bt10/list.html
+++ b/ss15/src/main/webapp/WEB-INF/views/bt10/list.html
@@ -18,6 +18,7 @@
         <td th:text="${cv.phoneNumber}"></td>
         <td>
             <a th:href="@{'/resumes/delete/' + ${cv.id}}">Xóa</a>
+            <a th:href="@{'/resumes/edit/' + ${cv.id}}">Sửa</a>
         </td>
     </tr>
 </table>
