--- a/project/src/main/webapp/WEB-INF/views/admin/sidebar.html
+++ b/project/src/main/webapp/WEB-INF/views/admin/sidebar.html
@@ -11,9 +11,9 @@
         <h6 class="fw-bold mb-4">🔻 My Company</h6>
         <ul class="nav flex-column">
             <li class="nav-item"><a class="nav-link text-dark" href="/admin/dashboard">📊 Dashboard</a></li>
-            <li class="nav-item"><a class="nav-link text-dark" href="/admin/candidate">👤 Candidate</a></li>
+            <li class="nav-item"><a class="nav-link text-dark" href="/admin/candidates">👤 Candidate</a></li>
             <li class="nav-item"><a class="nav-link active" href="/admin/technologies">📚 Technology</a></li>
-            <li class="nav-item"><a class="nav-link text-dark" href="/admin/recruitmentPosition">📌 Recruitment Position</a></li>
+            <li class="nav-item"><a class="nav-link text-dark" href="/admin/recruitment-position">📌 Recruitment Position</a></li>
             <li class="nav-item"><a class="nav-link text-dark" href="/admin/application">🗂️ Application</a></li>
         </ul>
     </div>
