--- a/project/src/main/webapp/WEB-INF/views/admin/dashboard.html
+++ b/project/src/main/webapp/WEB-INF/views/admin/dashboard.html
@@ -2,9 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Dashboard</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
 </head>
 <body>
+<div th:replace="admin/sidebar.html"></div>
 
+<div class="flex-1 p-6">
+    <h1 class="text-2xl font-bold text-gray-700">Trang dashboard</h1>
+</div>
 </body>
 </html>
