--- a/project/src/main/webapp/WEB-INF/views/reset-password.html
+++ b/project/src/main/webapp/WEB-INF/views/reset-password.html
@@ -20,10 +20,8 @@
         <button type="submit" class="btn btn-success w-100">Đổi mật khẩu</button>
     </form>
 
-    <!-- Hiển thị lỗi -->
-    <div th:if="${error}" class="alert alert-danger mt-3" th:text="${error}"></div>
+x    <div th:if="${error}" class="alert alert-danger mt-3" th:text="${error}"></div>
 
-    <!-- Hiển thị thành công + Nút quay về login -->
     <div th:if="${message}" class="alert alert-success mt-3" th:text="${message}"></div>
     <div th:if="${message}" class="text-center mt-3">
         <a th:href="@{/login}" class="btn btn-primary">Quay lại đăng nhập</a>
